--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,8 @@ margin-top: 250px;
 margin-bottom: 0px;
 text-align: center;
 }
+
+a, a:hover, a:visited, a:active {
+  color: white;
+  text-decoration: none;
+ }
